--- a/FoodTracker/Base.lproj/Main.storyboard
+++ b/FoodTracker/Base.lproj/Main.storyboard
@@ -31,7 +31,7 @@
                                                 <constraint firstAttribute="width" secondItem="L4l-UP-NRP" secondAttribute="height" multiplier="1:1" id="hJF-1q-6Ro"/>
                                             </constraints>
                                         </imageView>
-                                        <stackView opaque="NO" contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="dfl-na-fqg" customClass="RatingControl" customModule="FoodTracker" customModuleProvider="target">
+                                        <stackView opaque="NO" contentMode="center" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dfl-na-fqg" customClass="RatingControl" customModule="FoodTracker" customModuleProvider="target">
                                             <rect key="frame" x="105" y="39" width="155" height="31"/>
                                             <userDefinedRuntimeAttributes>
                                                 <userDefinedRuntimeAttribute type="size" keyPath="starSize">
@@ -65,6 +65,7 @@
                                     <outlet property="nameLabel" destination="INn-Ws-0hd" id="US0-fP-0C7"/>
                                     <outlet property="photoImageView" destination="L4l-UP-NRP" id="LXm-sq-yBK"/>
                                     <outlet property="ratingControl" destination="dfl-na-fqg" id="fKb-DD-y14"/>
+                                    <segue destination="BYZ-38-t0r" kind="show" identifier="ShowDetail" id="L90-4S-6Ja"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -74,14 +75,18 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Your Meals" id="Nxz-Lp-5Ql">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="KSf-ga-kf3"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="KSf-ga-kf3">
+                            <connections>
+                                <segue destination="CHK-wf-SwA" kind="presentation" identifier="AddItem" id="L8J-kr-3kd"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="l1G-wu-n5X" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="104.8" y="26.53673163418291"/>
         </scene>
-        <!--Meal View Controller-->
+        <!--New Meal-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="MealViewController" customModule="FoodTracker" customModuleProvider="target" sceneMemberID="viewController">
@@ -90,16 +95,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="H32-PO-zIQ">
-                                <rect key="frame" x="0.0" y="40" width="375" height="444.5"/>
+                                <rect key="frame" x="0.0" y="84" width="375" height="563"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Meal Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U7X-PZ-aV1">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="64.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="168"/>
+                                        <rect key="contentStretch" x="0.0" y="0.0" width="1" height="0.10000000000000001"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                     </textField>
                                     <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="320" placeholderIntrinsicHeight="320" image="defaultPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="VKT-VQ-leA">
-                                        <rect key="frame" x="27.5" y="72.5" width="320" height="320"/>
+                                        <rect key="frame" x="27.5" y="176" width="320" height="320"/>
                                         <gestureRecognizers/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="VKT-VQ-leA" secondAttribute="height" multiplier="1:1" id="mEb-af-G7K"/>
@@ -109,10 +115,10 @@
                                         </connections>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="81o-bH-gcN" customClass="RatingControl" customModule="FoodTracker" customModuleProvider="target">
-                                        <rect key="frame" x="56.5" y="400.5" width="262" height="44"/>
+                                        <rect key="frame" x="21.5" y="504" width="332" height="59"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="size" keyPath="starSize">
-                                                <size key="value" width="46" height="44"/>
+                                                <size key="value" width="60" height="59"/>
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="number" keyPath="starCount">
                                                 <integer key="value" value="5"/>
@@ -121,36 +127,54 @@
                                     </stackView>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="81o-bH-gcN" secondAttribute="bottom" id="2KV-NA-Dy3"/>
+                                    <constraint firstItem="VKT-VQ-leA" firstAttribute="top" relation="greaterThanOrEqual" secondItem="U7X-PZ-aV1" secondAttribute="bottom" constant="50" id="J9I-A0-U9S"/>
+                                    <constraint firstItem="U7X-PZ-aV1" firstAttribute="leading" secondItem="H32-PO-zIQ" secondAttribute="leading" id="NVZ-5V-hSL"/>
+                                    <constraint firstItem="VKT-VQ-leA" firstAttribute="leading" secondItem="H32-PO-zIQ" secondAttribute="leading" constant="27.5" id="aJJ-xY-yQ1"/>
+                                    <constraint firstItem="81o-bH-gcN" firstAttribute="top" relation="greaterThanOrEqual" secondItem="VKT-VQ-leA" secondAttribute="bottom" constant="8" id="fbF-TL-c75"/>
+                                    <constraint firstItem="U7X-PZ-aV1" firstAttribute="top" secondItem="H32-PO-zIQ" secondAttribute="top" id="kVY-cf-VSq"/>
                                     <constraint firstAttribute="trailing" secondItem="U7X-PZ-aV1" secondAttribute="trailing" id="qOj-3s-nKH"/>
+                                    <constraint firstAttribute="trailing" secondItem="VKT-VQ-leA" secondAttribute="trailing" constant="27.5" id="qe5-Pb-g6t"/>
                                 </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="H32-PO-zIQ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="8n5-tc-gfC"/>
                             <constraint firstItem="H32-PO-zIQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Btd-49-mNI"/>
-                            <constraint firstItem="H32-PO-zIQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="D9W-h8-xaE"/>
                             <constraint firstItem="H32-PO-zIQ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="bHz-xJ-Iyk"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="H32-PO-zIQ" secondAttribute="bottom" constant="182.5" id="cZS-Og-qy4"/>
-                            <constraint firstItem="H32-PO-zIQ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="ibb-4A-DAY"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="H32-PO-zIQ" secondAttribute="bottom" constant="20" id="cZS-Og-qy4"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="H32-PO-zIQ" secondAttribute="trailing" id="ugG-T5-6ga"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="New Meal" id="8Cr-vh-vEl">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="Qgf-4e-rUS">
+                            <connections>
+                                <action selector="cancel:" destination="BYZ-38-t0r" id="KON-Bd-1Ka"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="BaO-nT-eX9">
+                            <connections>
+                                <segue destination="VU8-25-oXU" kind="unwind" unwindAction="unwindToMealListWithSender:" id="dVP-rw-aPz"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="nameTextField" destination="U7X-PZ-aV1" id="OsC-yi-bZW"/>
                         <outlet property="photoImageView" destination="VKT-VQ-leA" id="OpM-0R-NSM"/>
                         <outlet property="ratingControl" destination="81o-bH-gcN" id="GRc-fg-djC"/>
+                        <outlet property="savebutton" destination="BaO-nT-eX9" id="pyW-rA-OVz"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <exit id="VU8-25-oXU" userLabel="Exit" sceneMemberID="exit"/>
                 <tapGestureRecognizer id="gvL-6s-Vyp">
                     <connections>
                         <action selector="selectImageFromPhotoLibrary:" destination="BYZ-38-t0r" id="NSm-Ox-Tdq"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="980" y="26.53673163418291"/>
+            <point key="canvasLocation" x="1904.8" y="26.53673163418291"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="bXt-wm-fUn">
@@ -170,8 +194,29 @@
             </objects>
             <point key="canvasLocation" x="-834.39999999999998" y="26.53673163418291"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="csQ-lA-7Io">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="CHK-wf-SwA" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="pKG-00-EYQ">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="iwp-3i-U1F"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Gii-cz-xNP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1002" y="495"/>
+        </scene>
     </scenes>
     <resources>
         <image name="defaultPhoto" width="480" height="360"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="L90-4S-6Ja"/>
+    </inferredMetricsTieBreakers>
 </document>
